tests/ui/feature-gates/feature-gate-f16.e2018.stderr
error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:7:10
   |
LL | const A: f16 = 10.0;
   |          ^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:10:12
   |
LL |     let a: f16 = 100.0;
   |            ^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:19:11
   |
LL | fn foo(a: f16) {}
   |           ^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:22:8
   |
LL |     a: f16,
   |        ^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:11:13
   |
LL |     let b = 0.0f16;
   |             ^^^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:12:13
   |
LL |     let c = 0f16;
   |             ^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the type `f16` is unstable
  --> $DIR/feature-gate-f16.rs:13:18
   |
LL |     let d: f32 = 1.0f16.into();
   |                  ^^^^^^
   |
   = note: see issue #116909 <https://github.com/rust-lang/rust/issues/116909> for more information
   = help: add `#![feature(f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `f32_from_f16`
  --> $DIR/feature-gate-f16.rs:13:25
   |
LL |     let d: f32 = 1.0f16.into();
   |                         ^^^^
   |
   = help: add `#![feature(f32_from_f16)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: required for `f32` to implement `From<f16>`
   = note: required for `f16` to implement `Into<f32>`

error: aborting due to 8 previous errors

For more information about this error, try `rustc --explain E0658`.
